crates/sutura-app/tests/snapshots/average-order-value-june__plan@postgres.snap
---
source: crates/sutura-app/tests/golden.rs
expression: plan
---
source: local
metric: average_order_value
table: orders
joins: []
bucket:
  label: period
  grain: month
  column:
    table: orders
    column: order_date
keys: []
measure:
  ratio:
    numerator:
      aggregate:
        aggregate: sum
        column:
          table: orders
          column: amount_cents
    denominator:
      aggregate:
        aggregate: count_distinct
        column:
          table: orders
          column: order_id
    zero_denominator: yields_null
measure_label: average_order_value
filters:
  - origin: definition
    predicate:
      at_or_after:
        column:
          table: orders
          column: order_date
        param: 0
  - origin: definition
    predicate:
      before:
        column:
          table: orders
          column: order_date
        param: 1
params:
  - Date:
      year: 2026
      month: 6
      day: 1
  - Date:
      year: 2026
      month: 7
      day: 1
range:
  start:
    year: 2026
    month: 6
    day: 1
  end:
    year: 2026
    month: 7
    day: 1
row_limit: 10000
