crates/sutura-app/tests/snapshots/average-order-value-june__rows@datafusion.snap
---
source: crates/sutura-app/tests/golden/data_systems.rs
expression: stable(rows)
---
period	average_order_value
Text(2026-06-01)	Real(6.333577777778e4)
