crates/sutura-app/tests/snapshots/average-order-value-june__sql@clickhouse.snap
---
source: crates/sutura-app/tests/golden.rs
expression: query.sql()
---
SELECT CAST(dateTrunc('month', "orders"."order_date") AS DATE) AS "period", CAST(sum("orders"."amount_cents") AS Nullable(Float64)) / NULLIF(COUNT(DISTINCT "orders"."order_id"), 0) AS "average_order_value" FROM "orders" WHERE "orders"."order_date" >= ? AND "orders"."order_date" < ? GROUP BY CAST(dateTrunc('month', "orders"."order_date") AS DATE) ORDER BY CAST(dateTrunc('month', "orders"."order_date") AS DATE) LIMIT 10000
