crates/sutura-app/tests/snapshots/average-order-value-june__sql@duckdb.snap
---
source: crates/sutura-app/tests/golden/dialects.rs
expression: query.sql()
---
SELECT CAST(DATE_TRUNC('month', "orders"."order_date") AS DATE) AS "period", CAST(SUM("orders"."amount_cents") AS DOUBLE) / NULLIF(COUNT(DISTINCT "orders"."order_id"), 0) AS "average_order_value" FROM "orders" WHERE "orders"."order_date" >= ? AND "orders"."order_date" < ? GROUP BY CAST(DATE_TRUNC('month', "orders"."order_date") AS DATE) ORDER BY CAST(DATE_TRUNC('month', "orders"."order_date") AS DATE) LIMIT 10000
